[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["tracing"] }
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
tower-http = { version = "0.6", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
mime = "0.3"
tower = { version = "0.5", features = ["util"] }
